# dsremap

./: .gitignore  .gitmodules  COPYING.txt  README.rst  TODO  appimage.yml.in  askpass.py  changelog.txt  dmgbuild-settings.py  dsremap.py  installer.nsi.in  make.py  manifest.json  pylintrc  requirements-linux.txt  requirements.txt  setup.py
codetests/: runtests.py  test1.gac  test1.result  test10.gac  test10.result  test11.gac  test11.result  test12.gac  test12.result  test13.gac  test13.result  test14.gac  test14.result  test2.gac  test2.result  test3.gac  test3.result  test4.gac  test4.result  test5.gac  test5.result  test6.gac  test6.result  test7.gac  test7.result  test8.gac  test8.result  test9.gac  test9.result
doc/: HostState.drawio  Makefile  make.bat
doc/source/: about.rst  actionlang.rst  build.rst  conf.py  devenv.rst  hacking.rst  index.rst  ps4config.rst  reverse.rst  ui.rst  usage.rst  usage_leonardo.rst  usage_ps4.rst  usage_rpi.rst
extras/: dsremap.desktop
i18n/: fr_FR.po  messages.pot
i18n/fr_FR/LC_MESSAGES/: dsremap.mo
icons/: dsremap.icns
res/: about.html  avrdude.conf
src/arduino/dsremap/: BytecodeWriter.h  CommonStructs.h  Config.h  Configuration.cpp  Configuration.h  DS4HID.h  DS4Structs.h  DS4USB.cpp  DS4USB.h  DS5HID.h  DS5Structs.h  DS5USB.cpp  DS5USB.h  Descriptors.cpp  Descriptors.h  Host.cpp  Host.h  IMUIntegrator.cpp  IMUIntegrator.h  LUFAConfig.h  Log.cpp  Log.h  USBController.cpp  USBController.h  Utils.h  VM.cpp  VM.h  darray.h  dsremap.ino  messages.h  opcodes.h  version.h
src/dsremap/: BytecodeWriter.cpp  Config.h  Configuration.cpp  DS4HID.h  DS4USB.h  Descriptors.cpp  IMUIntegrator.cpp  IMUIntegrator.h  VM.cpp  VM.h  blink.cpp  blink.h  dsremap.ino  messages.txt  platform.h
src/dsrlib/: filemgr.py  filemgr_linux.py  filemgr_mac.py  meta.py  settings.py
src/dsrlib/compiler/: __init__.py  asm.py  bcgen.py  codegen.py  compiler.py  interm.py  mtypes.py  opcodes.py  preprocessor.py  symbols.py
src/dsrlib/domain/: __init__.py  buttons.py  changelog.py  configuration.py  downloader.py  hidenum.py  listmodel.py  mixins.py  persistence.py  sudo.py  workspace.py  zcenum.py
src/dsrlib/filemgr/: __init__.py  base.py  linux.py  macos.py  windows.py
src/dsrlib/ui/: __init__.py  about.py  changelog.py  configupload.py  configuration.py  dualshock.py  main.py  mixins.py  pairer.py  resdl.py  settings.py  utils.py  widgets.py  workspace.py
src/ext/: setup.py  vmwrapper.cpp
src/pairing/: Makefile  config.h  pairing.c  utils.h
src/proxy/: CMakeLists.txt  Makefile  build-installer.sh  channel.c  channel.h  dsremap-initscript  imu.h  imu_private.h  installer.sh.in  listen.c  listen.h  proxy.c  proxy.cpp  psctrl.cpp  vm.h
src/proxy/cpp/: DS4Structs.h  IMUIntegrator.cpp  IMUIntegrator.h  VM.cpp  VM.h  opcodes.h  platform.h
src/proxy/src/: AuthChallenge.cpp  AuthChallenge.h  Dualshock4Proxy.cpp  Dualshock4Proxy.h  HTTPServer.cpp  HTTPServer.h  SonyControllerProxy.cpp  SonyControllerProxy.h
src/proxy/src/bluetooth/: BTDevice.cpp  BTDevice.h  BTUtils.cpp  BTUtils.h  BluetoothAcceptor.cpp  BluetoothAcceptor.h  Dualshock4ClientFactory.cpp  Dualshock4ClientFactory.h  Proxy.cpp  Proxy.h  SDPClientFactory.cpp  SDPClientFactory.h  SonyControllerClientFactory.cpp  SonyControllerClientFactory.h
src/proxy/src/usb/: AudioInterface.cpp  AudioInterface.h  ControlEndpoint.cpp  ControlEndpoint.h  DescriptorParser.cpp  DescriptorParser.h  Dualsense.cpp  Dualsense.h  DualsenseHIDInterface.cpp  DualsenseHIDInterface.h  Dualshock4.cpp  Dualshock4.h  Dualshock4HIDInterface.cpp  Dualshock4HIDInterface.h  DummyAudioInterface.cpp  DummyAudioInterface.h  Endpoint.cpp  Endpoint.h  FunctionFS.cpp  FunctionFS.h  HIDInterface.cpp  HIDInterface.h  InEndpoint.cpp  InEndpoint.h  Interface.cpp  Interface.h  OutEndpoint.cpp  OutEndpoint.h  SonyController.h  USBDevice.cpp  USBDevice.h
src/proxy/src/utils/: Application.cpp  Application.h  BytecodeFile.cpp  BytecodeFile.h  File.cpp  File.h  Logger.cpp  Logger.h  format.cpp  format.h
src/rpi0/: dsremap-proxy.service  extractcreds.py.in  kernel-patch.diff  prepare_image.sh  resize2fs_once.patch
src/rpi0/pairing/: Makefile  config.c  pairing.c  utils.c
src/rpi0/proxy/: Makefile  channel.c  channel.h  imu.cpp  listen.c  (+5 more)
src/server/: Makefile  dsremap-initscript  dsremap_serve.py  dsremap_serve.sh  installer.sh.in  post.sh  requirements.txt
tests/: base.py  test_all.py  test_opcodes_addr.py  test_preprocessor.py  test_vm_binary.py  test_vm_flow.py  test_vm_stack.py  test_vm_unary.py
tools/: clearconfig.py  disasm.py  ds4ctrl.py  ds4info.py  dsctrl.py  genids.py  logs.py  pairds4.py
tools/bytecode/: runcode.py
(+60 files in other folders)
